--- a/DA-PredGAN_Enhanced.ipynb
+++ b/DA-PredGAN_Enhanced.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember to **ONLY** run the next two cells if **USING** Google Colab"
+    "Remember to **ONLY** uncomment and run the next two cells if **USING** Google Colab"
    ]
   },
   {
@@ -47,8 +47,8 @@
     }
    ],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/gdrive/')"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/gdrive/')"
    ]
   },
   {
@@ -59,8 +59,8 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/content/gdrive/MyDrive/ACSE-9')"
+    "# import sys\n",
+    "# sys.path.append('/content/gdrive/MyDrive/ACSE-9')"
    ]
   },
   {
