--- a/Load_data.ipynb
+++ b/Load_data.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember to **ONLY** run the next two cells if **USING** Google Colab"
+    "Remember to **ONLY** uncomment and run the next two cells if **USING** Google Colab"
    ]
   },
   {
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/gdrive/')"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/gdrive/')"
    ]
   },
   {
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/content/gdrive/MyDrive/ACSE-9')"
+    "# import sys\n",
+    "# sys.path.append('/content/gdrive/MyDrive/ACSE-9')"
    ]
   },
   {
