--- a/PredGAN_Enhanced.ipynb
+++ b/PredGAN_Enhanced.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember to **ONLY** run the next two cells if **USING** Google Colab"
+    "Remember to **ONLY** uncomment and run the next two cells if **USING** Google Colab"
    ]
   },
   {
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/gdrive/')"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/gdrive/')"
    ]
   },
   {
@@ -32,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/content/gdrive/MyDrive/ACSE-9')"
+    "# import sys\n",
+    "# sys.path.append('/content/gdrive/MyDrive/ACSE-9')"
    ]
   },
   {
